--- a/alkonackanV1/res/layout/session.xml
+++ b/alkonackanV1/res/layout/session.xml
@@ -25,7 +25,7 @@
 		android:id="@+id/editText_var"
 		android:hint="Vart är du?" 
 		android:layout_marginTop="75sp"
-		android:maxLines="1">
+		android:inputType="textShortMessage">
 	</EditText>
 	<EditText 
 		android:layout_width="fill_parent"
@@ -33,14 +33,13 @@
 		android:id="@+id/editText_vem"
 		android:hint="Med vem?" 
 		android:layout_marginTop="130sp"
-		android:maxLines="1">
+		android:inputType="textShortMessage">
 	</EditText>
 	<TableLayout 
 		android:id="@+id/tableLayout1" 
 		android:layout_width="fill_parent" 
 		android:layout_height="wrap_content" 
-		android:layout_marginTop="190sp"
-		android:layout_marginLeft="30sp">
+		android:layout_marginTop="190sp">
 		<TableRow 
 			android:id="@+id/tableRow1" 
 			android:layout_width="fill_parent" 
@@ -49,16 +48,16 @@
 			<ImageButton 
 				android:src="@drawable/icon_stark" 
 				android:id="@+id/button_stark" 
-				android:layout_width="wrap_content" 
-				android:layout_height="wrap_content" 
+				android:layout_width="130dp" 
+				android:layout_height="90dp" 
 				android:layout_marginLeft="0sp">
 			</ImageButton>
 			<ImageButton 
 				android:src="@drawable/icon_folk" 
 				android:id="@+id/button_folk" 
-				android:layout_width="wrap_content" 
-				android:layout_height="wrap_content" 
-				android:layout_marginLeft="45sp">
+				android:layout_width="130dp" 
+				android:layout_height="90dp" 
+				android:layout_marginLeft="20sp">
 			</ImageButton>	
 		</TableRow>
 		<TableRow 
@@ -69,16 +68,16 @@
 			<ImageButton 
 				android:src="@drawable/icon_drink" 
 				android:id="@+id/button_drink" 
-				android:layout_width="wrap_content" 
-				android:layout_height="wrap_content" 
+				android:layout_width="130dp" 
+				android:layout_height="90dp" 
 				android:layout_marginLeft="0sp">
 			</ImageButton>
 			<ImageButton 
 				android:src="@drawable/icon_oel" 
 				android:id="@+id/button_oel" 
-				android:layout_width="wrap_content" 
-				android:layout_height="wrap_content" 
-				android:layout_marginLeft="45sp">
+				android:layout_width="130dp" 
+				android:layout_height="90dp" 
+				android:layout_marginLeft="20sp">
 			</ImageButton>
 		</TableRow>
 		<TableRow
@@ -88,16 +87,16 @@
 			<ImageButton 
 				android:src="@drawable/icon_vin" 
 				android:id="@+id/button_vin" 
-				android:layout_width="wrap_content" 
-				android:layout_height="wrap_content" 
+				android:layout_width="130dp" 
+				android:layout_height="90dp"  
 				android:layout_marginLeft="0sp">
 			</ImageButton>
 			<ImageButton 
 				android:src="@drawable/icon_shot" 
 				android:id="@+id/button_shot" 
-				android:layout_width="wrap_content" 
-				android:layout_height="wrap_content" 
-				android:layout_marginLeft="45sp">
+				android:layout_width="130dp" 
+				android:layout_height="90dp" 
+				android:layout_marginLeft="20sp">
 			</ImageButton>
 		</TableRow>
 	</TableLayout>
@@ -113,7 +112,8 @@
 			android:src="@drawable/avslutaknapp" 
 			android:layout_width="99dip"
          	android:layout_height="23dip"/>  	
-		<LinearLayout android:id="@+id/content"
+		<LinearLayout 
+			android:id="@+id/content"
 			android:layout_width="fill_parent" 
 			android:layout_height="wrap_content"
 			android:gravity="center_horizontal"
