--- a/alkonackanV1/res/layout/main.xml
+++ b/alkonackanV1/res/layout/main.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#FFFFFF" android:layout_gravity="top" android:orientation="vertical" android:padding="20dip">
-    <ImageButton 
-    	android:layout_width="50dip" 
-    	android:layout_height="50dip" 
-    	android:src="@drawable/icon_info" 
-    	android:layout_gravity="right" android:id="@+id/buttonInfo">
-    </ImageButton>
-    <TextView android:gravity="center|center_horizontal" android:layout_gravity="center" android:id="@+id/textView1" android:layout_height="80dip" android:text="ALKONACKAN" android:layout_width="wrap_content" android:keepScreenOn="true" android:textColor="#333333" android:textSize="24sp" android:layout_marginBottom="20dip"></TextView>
-    <TextView android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Gör dina personliga inställningar innan du startar." android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="50dip"></TextView>
-    <Button 
-    	android:id="@+id/buttonStart" 
-    	android:text="Inställningar" 
-    	android:layout_width="wrap_content" 
-    	android:layout_height="wrap_content" 
-    	android:textSize="18sp" 
-    	android:layout_gravity="center_horizontal|bottom">
-    </Button>
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:layout_gravity="top" android:orientation="vertical"
+	android:padding="20dip" android:background="#6bb4e9">
+	<ImageButton android:layout_gravity="right"
+		android:layout_width="50dip" android:id="@+id/buttonInfo" android:src="@drawable/icon_info"
+		android:layout_height="50dip"></ImageButton>
+	<ImageView android:gravity="center|center_horizontal"
+		android:layout_gravity="center" android:id="@+id/imageView_alkonackan"
+		android:layout_width="wrap_content" android:keepScreenOn="true"
+		android:textSize="24sp" android:src="@drawable/alkonackan"
+		android:layout_height="wrap_content">
+	</ImageView>
+	<TextView
+		android:text="Du kan vända dig till oss för individuella stödsamtal, rådgivning, testning eller för information om andra stödalternativ. Vi erbjuder även stöd i form av föreläsningar, kurser, grupper och andra aktiviteter.
+\n\nAll personal på Studenthälsan arbetar under sekretess och all kontakt med Studenthälsan är kostnadsfri!"
+		android:id="@+id/textView2" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:textColor="#eee"
+		android:textSize="16sp" android:padding="10dip"
+		android:layout_marginBottom="10dip"></TextView>
+	<Button android:textSize="18sp" android:text="Inställningar..."
+		android:layout_width="wrap_content" android:id="@+id/buttonStart"
+		android:padding="15dip" android:background="#eee"
+		android:layout_gravity="center_horizontal|bottom"
+		android:layout_height="wrap_content"></Button>
 </LinearLayout>
