--- a/alkonackanV1/res/layout/session.xml
+++ b/alkonackanV1/res/layout/session.xml
@@ -1,151 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout 
-	android:layout_width="fill_parent" 
-	android:layout_height="fill_parent"
-	android:paddingLeft="20dip" 
-	android:paddingRight="20dip"
-	android:paddingTop="20dip" 
-	android:paddingBottom="0sp" 
-	android:orientation="vertical"
-	android:background="#FFFFFF" 
-	xmlns:android="http://schemas.android.com/apk/res/android">
-	<Spinner 
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content" 
-		android:prompt="@string/kanslor_prompt"
-		android:drawSelectorOnTop="true" 
-		android:fadeScrollbars="true"
-		android:contentDescription="Kanslor" 
-		android:id="@+id/spinner_kanslor"
-		android:layout_marginTop="20sp">
-	</Spinner>
-	<EditText 
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content" 
-		android:id="@+id/editText_var"
-		android:hint="Vart är du?" 
-		android:layout_marginTop="75sp"
-		android:inputType="textShortMessage">
-	</EditText>
-	<EditText 
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content" 
-		android:id="@+id/editText_vem"
-		android:hint="Med vem?" 
-		android:layout_marginTop="130sp"
-		android:inputType="textShortMessage">
-	</EditText>
-	<TableLayout 
-		android:id="@+id/tableLayout1" 
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content" 
-		android:layout_marginTop="190sp">
-		<TableRow 
-			android:id="@+id/tableRow1" 
-			android:layout_width="fill_parent" 
-			android:layout_height="wrap_content" 
-			android:layout_marginBottom="10sp">
-			<ImageButton 
-				android:src="@drawable/icon_stark" 
-				android:id="@+id/button_stark"
-				android:layout_width="130dp" 
-				android:layout_height="90dp" 
-				android:layout_marginLeft="0sp">
-			</ImageButton>
-			<ImageButton 
-				android:src="@drawable/icon_folk" 
-				android:id="@+id/button_folk" 
-				android:layout_width="130dp" 
-				android:layout_height="90dp" 
-				android:layout_marginLeft="20sp">
-			</ImageButton>	
-		</TableRow>
-		<TableRow 
-			android:id="@+id/tableRow2" 
-			android:layout_width="fill_parent" 
-			android:layout_height="wrap_content"
-			android:layout_marginBottom="10sp">
-			<ImageButton 
-				android:src="@drawable/icon_drink" 
-				android:id="@+id/button_drink" 
-				android:layout_width="130dp" 
-				android:layout_height="90dp" 
-				android:layout_marginLeft="0sp">
-			</ImageButton>
-			<ImageButton 
-				android:src="@drawable/icon_oel" 
-				android:id="@+id/button_oel" 
-				android:layout_width="130dp" 
-				android:layout_height="90dp" 
-				android:layout_marginLeft="20sp">
-			</ImageButton>
-		</TableRow>
-		<TableRow
-			android:id="@+id/tableRow2" 
-			android:layout_width="fill_parent" 
-			android:layout_height="wrap_content">
-			<ImageButton 
-				android:src="@drawable/icon_vin" 
-				android:id="@+id/button_vin" 
-				android:layout_width="130dp" 
-				android:layout_height="90dp"  
-				android:layout_marginLeft="0sp">
-			</ImageButton>
-			<ImageButton 
-				android:src="@drawable/icon_shot" 
-				android:id="@+id/button_shot" 
-				android:layout_width="130dp" 
-				android:layout_height="90dp" 
-				android:layout_marginLeft="20sp">
-			</ImageButton>
-		</TableRow>
-	</TableLayout>
- 	<SlidingDrawer 
- 		android:id="@+id/slidingDrawerOffDrawer"
-		android:layout_width="fill_parent" 
-		android:layout_height="fill_parent"
-		android:handle="@+id/handle" 
-		android:content="@+id/content"
-		android:layout_marginTop="400dip">	
-		<ImageView
-			android:id="@id/handle"
-			android:src="@drawable/avslutaknapp" 
-			android:layout_width="99dip"
-         	android:layout_height="23dip"/>  	
-		<LinearLayout 
-			android:id="@+id/content"
-			android:layout_width="fill_parent" 
-			android:layout_height="wrap_content"
-			android:gravity="center_horizontal"
-			android:background="#e8e8e8">	
-			<Button 
-				android:text="Avsluta session" 
-				android:layout_height="wrap_content" 
-				android:layout_width="wrap_content" 
-				android:id="@+id/buttonAvslutaSession" 
-				android:textSize="18sp"
-				android:layout_margin="20dip">
-			</Button>	
-		</LinearLayout>
-	</SlidingDrawer>
+android:layout_width="fill_parent" 
+android:layout_height="fill_parent"
+android:paddingLeft="20dip" 
+android:paddingRight="20dip"
+android:paddingTop="20dip" 
+android:paddingBottom="0sp" 
+android:orientation="vertical"
+android:background="#6bb4e9" 
+xmlns:android="http://schemas.android.com/apk/res/android">
+
+<TableLayout android:id="@+id/tableLayout2" 
+android:layout_width="fill_parent" 
+android:layout_height="wrap_content" android:stretchColumns="*">
+<TableRow android:layout_width="fill_parent">
+<Spinner
+android:layout_height="wrap_content" 
+android:prompt="@string/kanslor_prompt"
+android:drawSelectorOnTop="true" 
+android:fadeScrollbars="true"
+android:contentDescription="Kanslor" 
+android:id="@+id/spinner_kanslor" android:layout_width="fill_parent">
+</Spinner>
+</TableRow>
+<TableRow android:layout_width="fill_parent">
+<EditText 
+android:layout_width="fill_parent"
+android:layout_height="wrap_content" 
+android:id="@+id/editText_var"
+android:hint="Vart √§r du?" 
+android:layout_marginTop="10dip"
+android:inputType="textShortMessage">
+</EditText>
+</TableRow>
+<TableRow android:layout_width="fill_parent">
+<EditText 
+android:layout_width="fill_parent"
+android:layout_height="wrap_content" 
+android:id="@+id/editText_vem"
+android:hint="Med vem?" 
+android:layout_marginTop="10dip"
+android:inputType="textShortMessage">
+</EditText>
+</TableRow>
+</TableLayout>
+
+<TableLayout 
+android:id="@+id/tableLayout1" 
+android:layout_width="fill_parent" 
+android:layout_height="wrap_content" 
+android:layout_marginTop="180sp">
+<TableRow 
+android:id="@+id/tableRow1" 
+android:layout_width="fill_parent" 
+android:layout_height="wrap_content" 
+android:layout_marginBottom="10sp">
+<ImageButton 
+android:background="#eee"
+android:src="@drawable/icon_stark" 
+android:id="@+id/button_stark" 
+android:layout_width="130dp" 
+android:layout_height="90dp" 
+android:layout_marginLeft="0sp">
+</ImageButton>
+<ImageButton 
+android:background="#eee"
+android:src="@drawable/icon_folk" 
+android:id="@+id/button_folk" 
+android:layout_width="130dp" 
+android:layout_height="90dp" 
+android:layout_marginLeft="20sp">
+</ImageButton> 
+</TableRow>
+<TableRow 
+android:id="@+id/tableRow2" 
+android:layout_width="fill_parent" 
+android:layout_height="wrap_content"
+android:layout_marginBottom="10sp">
+<ImageButton 
+android:background="#eee"
+android:src="@drawable/icon_drink" 
+android:id="@+id/button_drink" 
+android:layout_width="130dp" 
+android:layout_height="90dp" 
+android:layout_marginLeft="0sp">
+</ImageButton>
+<ImageButton 
+android:background="#eee"
+android:src="@drawable/icon_oel" 
+android:id="@+id/button_oel" 
+android:layout_width="130dp" 
+android:layout_height="90dp" 
+android:layout_marginLeft="20sp">
+</ImageButton>
+</TableRow>
+<TableRow
+android:id="@+id/tableRow2" 
+android:layout_width="fill_parent" 
+android:layout_height="wrap_content">
+<ImageButton 
+android:background="#eee"
+android:src="@drawable/icon_vin" 
+android:id="@+id/button_vin" 
+android:layout_width="130dp" 
+android:layout_height="90dp" 
+android:layout_marginLeft="0sp">
+</ImageButton>
+<ImageButton 
+android:background="#eee"
+android:src="@drawable/icon_shot" 
+android:id="@+id/button_shot" 
+android:layout_width="130dp" 
+android:layout_height="90dp" 
+android:layout_marginLeft="20sp">
+</ImageButton>
+</TableRow>
+</TableLayout>
+<SlidingDrawer 
+android:id="@+id/slidingDrawerOffDrawer"
+android:layout_width="fill_parent" 
+android:layout_height="fill_parent"
+android:handle="@+id/handle" 
+android:content="@+id/content"
+android:layout_marginTop="400dip"> 
+<ImageView
+android:id="@id/handle"
+android:src="@drawable/avslutaknapp" 
+android:layout_width="99dip"
+android:layout_height="23dip"/> 
+<LinearLayout 
+android:id="@+id/content"
+android:layout_width="fill_parent" 
+android:layout_height="wrap_content"
+android:gravity="center_horizontal"
+android:background="#666"> 
+<Button 
+android:background="#eee"
+android:padding="15dip"
+android:text="Avsluta session" 
+android:layout_height="wrap_content" 
+android:layout_width="wrap_content" 
+android:id="@+id/buttonAvslutaSession" 
+android:textSize="18sp"
+android:layout_margin="20dip">
+</Button> 
+</LinearLayout>
+</SlidingDrawer>
 </RelativeLayout>
-
-<!--  <SlidingDrawer
-     android:id="@+id/slidingDrawerOffDrawer"
-     android:layout_width="fill_parent"
-     android:layout_height="fill_parent"
-
-     android:handle="@+id/handle"
-     android:content="@+id/content">
-
-     <ImageView
-         android:id="@id/handle"
-         android:layout_width="88dip"
-         android:layout_height="44dip" />
-
-     <GridView
-         android:id="@id/content"
-         android:layout_width="fill_parent"
-         android:layout_height="fill_parent" />
-
- </SlidingDrawer> -->
